Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -426,11 +426,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "def bias(y, y_hat):\n",
+    "    return np.mean(y_hat - y)"
    ]
   },
   {
