Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -430,9 +430,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n",
-    "def bias(y, y_hat):\n",
-    "    return np.mean(y_hat - y)"
+    "# your code here\n"
    ]
   },
   {
@@ -452,7 +450,7 @@
    "source": [
     "import numpy as np\n",
     "def bias(y, y_hat):\n",
-    "    pass"
+    "    return np.mean(y_hat - y)"
    ]
   },
   {
