--- a/index.ipynb
+++ b/index.ipynb
@@ -468,7 +468,7 @@
    "outputs": [],
    "source": [
     "def variance(y_hat):\n",
-    "    pass"
+    "    return np.mean([yi**2 for yi in y_hat]) - np.mean(y_hat)**2"
    ]
   },
   {
