--- a/index.ipynb
+++ b/index.ipynb
@@ -484,7 +484,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# code for train set bias and variance"
+    "# code for train set bias and variance\n"
    ]
   },
   {
