--- a/index.ipynb
+++ b/index.ipynb
@@ -306,7 +306,7 @@
    "outputs": [],
    "source": [
     "# domgross is the outcome variable\n",
-    "X = df"
+    "X = df[[ \"domgross\", \"budget\", \"imdbRating\", \"Metascore\", \"imdbVotes\"]]"
    ]
   },
   {
