Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -306,7 +306,8 @@
    "outputs": [],
    "source": [
     "# domgross is the outcome variable\n",
-    "X = df[[ \"domgross\", \"budget\", \"imdbRating\", \"Metascore\", \"imdbVotes\"]]"
+    "X = df[[\"budget\", \"imdbRating\", \"Metascore\", \"imdbVotes\"]]\n",
+    "y "
    ]
   },
   {
