--- a/index.ipynb
+++ b/index.ipynb
@@ -301,13 +301,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# domgross is the outcome variable\n",
     "X = df[[\"budget\", \"imdbRating\", \"Metascore\", \"imdbVotes\"]]\n",
-    "y "
+    "y = df['domgross']"
    ]
   },
   {
