--- a/index.ipynb
+++ b/index.ipynb
@@ -319,7 +319,7 @@
     "#Your code here\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20, random_state=34567)\n"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20)\n"
    ]
   },
   {
