--- a/index.ipynb
+++ b/index.ipynb
@@ -336,7 +336,7 @@
    "outputs": [],
    "source": [
     "#Your code \n",
-    "from sklearn.linear_model import LinearRegression"
+    "from sklearn.linear_model import *"
    ]
   },
   {
