Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -331,12 +331,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Your code \n",
-    "from sklearn.linear_model import *"
+    "import sklearn.linear_model "
    ]
   },
   {
