--- a/index.ipynb
+++ b/index.ipynb
@@ -345,12 +345,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train = pd.concat([X_train, y_train], axis=1, ignore_index=True)\n",
-    "data_train = df_train.sort_values([0])\n",
-    "reg = LinearRegression().fit(data_train[0].values.reshape(-1, 1), data_train[1])\n",
-    "\n",
-    "df_test = pd.concat([X_test, y_test], axis=1, ignore_index=True)\n",
-    "data_test = df_test.sort_values([0])"
+    "linre"
    ]
   },
   {
