Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -371,23 +371,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'LinearRegression' object has no attribute 'coef'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-b75684f5db89>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcoef\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'LinearRegression' object has no attribute 'coef'"
-     ]
+     "data": {
+      "text/plain": [
+       "array([ 8.93993928e-01, -1.61861747e+07,  1.81381920e+06,  1.95327618e+02])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "lr.coef"
+    "lr.coef_"
    ]
   },
   {
