--- a/index.ipynb
+++ b/index.ipynb
@@ -437,15 +437,11 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "# your code here\n",
-    "plt.figure(figsize=(10, 4))\n",
-    "plt.subplot(1, 2, 1)\n",
-    "plt.scatter(data_train[0], data_train[1], color = \"green\")\n",
-    "plt.plot(data_train[0].values.reshape(-1, 1), reg.predict(data_train[0].values.reshape(-1, 1)))\n",
-    "\n",
-    "\n",
-    "plt.subplot(1, 2, 2)\n",
-    "plt.scatter(data_test[0], data_test[1], color = \"green\")\n",
-    "plt.plot(data_test[0].values.reshape(-1, 1), reg.predict(data_test[0].values.reshape(-1, 1)))\n"
+    "plt.figure(figsize=(8,5))\n",
+    "plt.scatter(y_train, linreg.predict(X_train), label='Model')\n",
+    "plt.plot(y_train, y_train, label='Actual Data')\n",
+    "plt.title('Model vs Data for Training Set')\n",
+    "plt.legend();"
    ]
   },
   {
