Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -437,8 +437,9 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "# your code here\n",
+    "\n",
     "plt.figure(figsize=(8,5))\n",
-    "plt.scatter(y_train, linreg.predict(X_train), label='Model')\n",
+    "plt.scatter(y_train, lr.predict(X_train), label='Model')\n",
     "plt.plot(y_train, y_train, label='Actual Data')\n",
     "plt.title('Model vs Data for Training Set')\n",
     "plt.legend();"
