--- a/index.ipynb
+++ b/index.ipynb
@@ -527,7 +527,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# code for train set bias and variance\n"
+    "# code for train set bias and variance\n",
+    "bias()"
    ]
   },
   {
