--- a/index.ipynb
+++ b/index.ipynb
@@ -528,7 +528,7 @@
    "outputs": [],
    "source": [
     "# code for train set bias and variance\n",
-    "bias(df[])"
+    "bias(df[y_train, lr.predict(X_train)])"
    ]
   },
   {
