--- a/index.ipynb
+++ b/index.ipynb
@@ -528,7 +528,8 @@
    "outputs": [],
    "source": [
     "# code for train set bias and variance\n",
-    "bias(df[y_train, lr.predict(X_train)])"
+    "bias(y_train, lr.predict(X_train))\n",
+    "\n"
    ]
   },
   {
