Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -523,25 +523,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3435917446055415.0"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-7.450580596923828e-09\n",
+      "3435917446055415.0\n"
+     ]
     }
    ],
    "source": [
     "# code for train set bias and variance\n",
-    "prinbias(y_train, lr.predict(X_train))\n",
+    "print(bias(y_train, lr.predict(X_train)))\n",
     "\n",
-    "variance(lr.predict(X_train))"
+    "print(variance(lr.predict(X_train)))"
    ]
   },
   {
