Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -523,23 +523,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-7.450580596923828e-09\n",
-      "3435917446055415.0\n"
+      "Bias: -7.450580596923828e-09 \n",
+      "Variance: 3435917446055415.0\n"
      ]
     }
    ],
    "source": [
     "# code for train set bias and variance\n",
-    "print(bias(y_train, lr.predict(X_train)))\n",
-    "\n",
-    "print(variance(lr.predict(X_train)))"
+    "b = bias(y_train, lr.predict(X_train)) \n",
+    "v = variance(lr.predict(X_train)) \n",
+    "print('Bias: {} \\nVariance: {}'.format(b,v))"
    ]
   },
   {
