--- a/index.ipynb
+++ b/index.ipynb
@@ -548,7 +548,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# code for test set bias and variance"
+    "# code for test set bias and variance\n",
+    "b = bias(y_test, lr.predict(X_test)) \n",
+    "v = variance(lr.predict(X_train)) \n",
+    "print('Bias: {} \\nVariance: {}'.format(b,v))"
    ]
   },
   {
