Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -544,13 +544,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bias: -7936449.617207661 \n",
+      "Variance: 6720824155554933.0\n"
+     ]
+    }
+   ],
    "source": [
     "# code for test set bias and variance\n",
     "b = bias(y_test, lr.predict(X_test)) \n",
-    "v = variance(lr.predict(X_train)) \n",
+    "v = variance(lr.predict(X_test)) \n",
     "print('Bias: {} \\nVariance: {}'.format(b,v))"
    ]
   },
