--- a/index.ipynb
+++ b/index.ipynb
@@ -511,7 +511,7 @@
    "outputs": [],
    "source": [
     "def variance(y_hat):\n",
-    "    return np.mean([yi**2 for yi in y_hat]) - np.mean(y_hat)**2"
+    "    return np.mean([yi**2 for yi in y_hat]) - (np.mean(y_hat))**2"
    ]
   },
   {
