Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -506,12 +506,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "def variance(y_hat):\n",
-    "    return np.mean([yi**2 for yi in y_hat]) - (np.mean(y_hat))**2"
+    "    return np.mean([yi**2 for yi in y_hat]) - ((np.mean(y_hat))**2)"
    ]
   },
   {
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
