--- a/index.ipynb
+++ b/index.ipynb
@@ -604,7 +604,7 @@
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import PolynomialFeatures\\\n",
-    "# your code here"
+    "# your code here\n"
    ]
   },
   {
