--- a/index.ipynb
+++ b/index.ipynb
@@ -599,13 +599,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import PolynomialFeatures\\\n",
-    "# your code here\n"
+    "# your code here\n",
+    "poly = PolynomialFeatures(3)\n",
+    "\n",
+    "X_train_poly = poly.fit_transform(X_train)\n",
+    "X_test_poly = poly.fit_transform(X_test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
