Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -306,8 +306,8 @@
    "outputs": [],
    "source": [
     "# domgross is the outcome variable\n",
-    "X = df[[\"budget\", \"imdbRating\", \"Metascore\", \"imdbVotes\"]]\n",
-    "y = df['domgross']"
+    "X = pd_df[[\"budget\", \"imdbRating\", \"Metascore\", \"imdbVotes\"]]\n",
+    "y = pd_df['domgross']"
    ]
   },
   {
