--- a/index.ipynb
+++ b/index.ipynb
@@ -697,7 +697,8 @@
    "outputs": [],
    "source": [
     "# your code here\n",
-    "bi"
+    "bias(y_train, linreg.predict(X_train_poly))\n",
+    "\n"
    ]
   },
   {
