Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -697,8 +697,9 @@
    "outputs": [],
    "source": [
     "# your code here\n",
-    "bias(y_train, linreg.predict(X_train_poly))\n",
-    "\n"
+    "b = bias(y_train, linreg.predict(X_train_poly))\n",
+    "v = variance(linreg.predict(X_train_poly))\n",
+    "print('Bias: {})\n"
    ]
   },
   {
