Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -699,7 +699,7 @@
     "# your code here\n",
     "b = bias(y_train, linreg.predict(X_train_poly))\n",
     "v = variance(linreg.predict(X_train_poly))\n",
-    "print('Bias: {})\n"
+    "print(f'Bias: {b} )\n"
    ]
   },
   {
