--- a/index.ipynb
+++ b/index.ipynb
@@ -692,14 +692,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bias: 9.130427895224595e-16 \n",
+      "Variance: 0.06541675785518436\n"
+     ]
+    }
+   ],
    "source": [
     "# your code here\n",
     "b = bias(y_train, linreg.predict(X_train_poly))\n",
     "v = variance(linreg.predict(X_train_poly))\n",
-    "print(f'Bias: {b} )\n"
+    "print(f'Bias: {b} \\nVariance: {v}')\n"
    ]
   },
   {
