Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -720,11 +720,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bias: -0.5605014274354362 \n",
+      "Variance: 2.245039063901652\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "b = bias(y_test, linreg.predict(X_test_poly))\n",
+    "v = variance(linreg.predict(X_test_poly))\n",
+    "print(f'Bias: {b} \\nVariance: {v}')\n"
    ]
   },
   {
