--- a/index.ipynb
+++ b/index.ipynb
@@ -733,10 +733,12 @@
     }
    ],
    "source": [
-    "# your code here\n",
-    "b = bias(y_test, linreg.predict(X_test_poly))\n",
-    "v = variance(linreg.predict(X_test_poly))\n",
-    "print(f'Bias: {b} \\nVariance: {v}')\n"
+    "linreg = LinearRegression()\n",
+    "linreg.fit(X_train_poly, y_train)\n",
+    "plt.plot(y_train, y_train, label='Actual Data')\n",
+    "plt.scatter(y_train, linreg.predict(X_train_poly), label='Model')\n",
+    "plt.legend()\n",
+    "plt.title('Model vs Data for Training Set')"
    ]
   },
   {
@@ -752,7 +754,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "b = bias(y_test, linreg.predict(X_test_poly))\n",
+    "v = variance(linreg.predict(X_test_poly))\n",
+    "print(f'Bias: {b} \\nVariance: {v}')\n"
    ]
   },
   {
